Fix layout shift

--- a/src/routes/about/Interposers/Hero.module.css
+++ b/src/routes/about/Interposers/Hero.module.css
@@ -38,8 +38,11 @@
 }
 .image {
   width: 40%;
+  min-width: 0;
   max-width: 40rem;
   height: auto;
+  aspect-ratio: 5/4;
+  object-fit: cover;
 }
 @media (max-width: $interposers-bp-mobile) {
   .textContainer {
